test/libsolidity/syntaxTests/literalSuffixes/parsing/invalid_suffix_event.sol
contract C {
    event E(uint) suffix;
}
// ----
// ParserError 2314: (31-37): Expected ';' but got identifier
